--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,6 @@
 /build/
 vendor/
-cli/bin
-lcm/bin
-restapi/bin
-trainer/bin
-jobmonitor/bin
-jobmonitor/logfiles
 metrics/bin
-grpc-health-checker/bin
 bin/copy.sh
 *.bk
 .vagrant/
@@ -21,8 +14,6 @@ tmp
 .venv/
 .idea/
 venv/
-bin/dind_scripts/config.json
-bin/dind_scripts/go1.10.1.linux-amd64.tar.gz
-bin/dind_scripts/helm-v2.8.2-linux-amd64.tar.gz
-bin/dind_scripts/linux-amd64/
 FfDL.iml
+bin/
+helmdeploy/
